Deler informasjon om etablert tilsyn mellom alle søkere. (#4169)